# pl-rclone-copy-template

./: .dockerignore  Cargo.toml  Dockerfile  README.md  chris_plugin_info.json  setup.py
.github/workflows/: test.yml
src/: main.rs
testing/: .editorconfig  Makefile  README.md  create_config.sh  docker-compose.yml  test_ds.sh  test_fs.sh
tests/: test_chrclone.py
