[package]
name = "chrclone"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.3", features = ["macros"] }


[dev-dependencies]
rstest = "0.25.0"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = "symbols"
lto = "fat"
opt-level = "z"
panic = "abort"
